gitops/infra/homelab/music-assistant/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: music-assistant
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
