gitops/infra/homelab/music-assistant/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: music-assistant
  namespace: music-assistant
  labels:
    app: music-assistant
spec:
  selector:
    app: music-assistant
  ports:
    - name: http
      port: 8095
      targetPort: 8095
